# fit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  README.md  fit-analysis.md  fitness-app-reference-guide.md  pyproject.toml
data/exercises/: comprehensive_exercise_database.json
data/recipes/: unified_external_recipes.json
docs/: 01_overview.md  02_archetypes.md  03_calculators.md  04_questionnaires.md  05_decision_trees.md  06_meal_plans.md  07_exercise_plans.md  08_api_reference.md  09_methodology.md  10_cli_and_intake.md  README.md
docs/analysis/: exercise_database_analysis.md  fit-analysis.md
docs/protocols/: comprehensive-plan-building-protocols.md  recipe-scraping-and-7day-system.md
docs/reference/: evidence-source-map.md  unified-fitness-reference-guide.md
docs/reports/: meal-plan-quality-audit.md  remediation-report.md
examples/: demo_archetypes.py  demo_arthur.py  demo_basic.py  intake_form.html  render_html.py  run_all.sh  sample_arthur.json  sample_client.json  sample_derek.json  sample_emma.json  sample_lena.json  sample_maya.json
exercise/: extract_app_data.py  fitclick_exercises_raw.json  keep_out_filenames.json  manual_review.json  strict_multicombo_review.txt
exercise/app_data/: README.md  exercise_library.csv  (+5 more)
fitness_engine/: __init__.py  adjustments.py  archetypes.py  calculators.py  cli.py  decision_trees.py  exercise_database.py  exercise_plans.py  meal_plan_auditor.py  meal_plans.py  persistence.py  protocols.py  questionnaires.py  recommender.py  render_html.py  seven_day_meal_planner.py
output/: arthur_plan.html  client_plan.html  derek_plan.html  emma_plan.html  lena_plan.html  maya_plan.html  sample_7day_meal_plan.json  sample_7day_meal_plan_audit.json  sara_plan.html
scripts/: build_unified_recipe_database.py  generate_common_profile_meal_plans.py  import_muscleandstrength_recipes.py  scrape_ethiopian_recipes.py  scrape_external_recipes.py
tests/: test_audit_regressions.py  test_calculators.py  test_integration.py  test_remediation_regressions.py
(+839 files in other folders)
